overlay submitted msg added, menu tab images tweaked for IE 6 and FF3 wrapping issue fixed.

--- a/public/stylesheets/fixes_ie7.css
+++ b/public/stylesheets/fixes_ie7.css
@@ -64,7 +64,8 @@ h3 {
   padding-top: 20px; }
 
 #view_activities_by {
-  margin-top: 20px; }
+  margin-top: 20px;
+  width: 201px; }
 
 #questions.no_help .button input {
   margin-right: 290px; }
